# data-scientist-career

./: .gitignore  KR_DOCS_POLICY.md  README.md  README_KR_TEMPLATE.md  conftest.py
agentic-decisionops-workbench/: .gitignore  README.md  pyproject.toml  requirements.txt
agentic-decisionops-workbench/docs/: data_contract.md  data_flow_diagram.md  hiring_market_alignment.md  modeling_protocol.md  privacy_publication_gate.md  reproducibility.md  research_design.md  research_gap_report.md  system_design.md  topic_selection.md  실험보고서_20260716_planner_replay_ablation.md
agentic-decisionops-workbench/scripts/: decisionops  fetch_ny511_sample.py  run_all.sh  serve_api.sh  smoke_public_demo.py
agentic-decisionops-workbench/tests/: test_app.py  test_decisionops.py  test_pipeline.py  test_public_demo_smoke.py
job-market-intelligence/: .env.example  .gitignore  README.md  profile.example.yaml  pyproject.toml  requirements.txt
job-market-intelligence/docs/: api_sources.md  data_contract.md  hiring_market_alignment.md  modeling_protocol.md  portfolio_story.md  privacy_publication_gate.md  reproducibility.md  research_design.md  research_gap_report.md  system_design.md  topic_selection.md
job-market-intelligence/job_market_intel/: __init__.py  analyze.py  cli.py  errors.py  models.py  normalize.py  profile.py  report.py  resume.py  scoring.py  skills.py  storage.py
job-market-intelligence/reports/: data_source_and_contract.md  final_report.md  job_market_report.html  job_market_report.md  model_card.md  quality_gate_checks.csv  run_summary.json
registry/: projects.json
(+57 files in other folders)
